# cookiecutter-azure-dbx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  contributing.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: ci.yml
hooks/: pre_gen_project.py
tests/: test_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-pipelines.yml  dev_deploy.sh  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_name}}/.dbx/: project.json
{{cookiecutter.project_name}}/conf/: gen-deployment.yml
{{cookiecutter.project_name}}/conf/tasks/: gen-sample_task_config.yml
{{cookiecutter.project_name}}/tests/unit/: conftest.py  test_sample_task.py  utils.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  common.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/resources/: init_script.sh
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/schemas/: names.py  structs.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/tasks/: sample_task.py
